# AgentForge

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp_server/: server.py
postman_collection/: AgentForge.postman_collection.json
src/: config.py  main.py
src/agents/: __init__.py  analyst.py  base.py  researcher.py  reviewer.py  supervisor.py  writer.py
src/api/: __init__.py  routes.py
src/graph/: __init__.py  builder.py  checkpoints.py
src/middleware/: __init__.py  retry.py  token_budget.py
src/models/: __init__.py  agents.py  api.py  state.py
src/observability/: __init__.py  cost_tracker.py  langfuse_client.py
src/tools/: __init__.py  mcp_client.py  registry.py  web_search.py
tests/: conftest.py  test_integration.py
